media/com_quantummanager/css/quantumcropperjs.css
/* ... */
.quantumcropperjs-module.active {
    display: flex;
}
.quantumcropperjs-module .cropper-save {
    display: none;
    background: rgba(255,255,255,0.7);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.quantumcropperjs-module .cropper-save .loader {
    width: 480px;
}
.quantumcropperjs-module .qm-input,
.quantumcropperjs-module .qm-select {
    display: inline-block;
    height: 30px;
    border: 1px solid #333;
    padding: 0 5px;
    font-size: 13px;
    line-height: 18px;
    border-radius: 3px;
    vertical-align: middle;
}
.quantumcropperjs-module .qm-input {
    background: #333;
    color: #fff;
    transition: .2s ease-in-out;
    transition-property: color,background-color,border,width;
}
.quantumcropperjs-module .qm-input::-webkit-outer-spin-button,
.quantumcropperjs-module .qm-input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
.quantumcropperjs-module .qm-input[type=number] {
    -moz-appearance: textfield;
}
.quantumcropperjs-module .qm-select {
    margin: 0;
    background: #2b2b2b;
    color: #ffffff;
    border: 1px solid #2b2b2b;
    border-left: 0;
    font-weight: bold;
}
.quantumcropperjs-module .toolbar {
    display: block;
    position: relative;
    padding: 25px;
    width: 15%;
    min-width: 290px;
    height: 100%;
    background: #444;
}
.quantumcropperjs-module .toolbar .fields-list {
    max-height: 70%;
    overflow-y: auto;
    margin: 0 -25px 0 -35px;
    padding: 0 25px 0 35px;
}
.quantumcropperjs-module .toolbar > div > div {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}
.quantumcropperjs-module .toolbar > div > div:first-child .quantummanager-icon {
    margin-right: 4px;
    width: 12px;
    height: 12px;
}
.quantumcropperjs-module .toolbar .buttons-toggles .qm-input {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    border: 0;
}
.quantumcropperjs-module .toolbar .buttons-methods {
    display: flex;
    align-items: center;
}
.quantumcropperjs-module .toolbar .buttons-toggles {
    display: flex;
    align-items: center;
}
.quantumcropperjs-module .toolbar .qm-btn-group {
    display: flex;
    align-items: center;
}
.quantumcropperjs-module .toolbar .qm-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    line-height: 0;
    height: 37px;
    font-size: 15px;
}
.quantumcropperjs-module .toolbar .buttons-methods {
    margin-right: 5px;
}
.quantumcropperjs-module .toolbar .buttons-toggles .qm-btn {
    height: 28px;
}
.quantumcropperjs-module .toolbar .buttons-methods .qm-btn {
    position: relative;
}
.quantumcropperjs-module .toolbar .quantummanager-icon {

}
.quantumcropperjs-module .qm-input-group.hide {
    display: none;
}
.quantumcropperjs-module .qm-input-group > label {
    margin-bottom: 5px;
}
.quantumcropperjs-module .qm-name-file-wrap {
    display: flex;
    align-items: center;
    justify-content: stretch;
}
.quantumcropperjs-module .qm-name-file-wrap label {
    width: 100%;
    color: #cbcbcb;
}
.quantumcropperjs-module .qm-name-file-wrap .qm-input-wrapper {
    flex: 1;
}
.quantumcropperjs-module .qm-name-file-wrap .qm-input {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
.quantumcropperjs-module .qm-name-file-wrap .qm-select {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
.quantumcropperjs-module .qm-input-wrapper {
    position: relative;
    display: flex;
}
.quantumcropperjs-module .qm-input-wrapper .qm-input {
    margin: 0;
    flex: 1;
    width: 100%;
    vertical-align: middle;
    display: inline-block;
    max-width: 100%;
}
.quantumcropperjs-module .qm-input-wrapper .qm-input:focus {
    outline: none;
}
.quantumcropperjs-module .qm-input::placeholder {
    color: hsla(0, 0%, 100%, 0.6);
}
.quantumcropperjs-module .qm-input-wrapper span {
    position: absolute;
    background-color: #78abde;
    transition: transform 0.5s ease;
}
.quantumcropperjs-module .qm-input-wrapper .bottom,
.quantumcropperjs-module .qm-input-wrapper .top {
    height: 1px;
    left: 0;
    right: 0;
    transform: scaleX(0);
}
.quantumcropperjs-module .qm-input-wrapper .left,
.quantumcropperjs-module .qm-input-wrapper .right {
    width: 1px;
    top: 0;
    bottom: 0;
    transform: scaleY(0);
}
.quantumcropperjs-module .qm-input-wrapper .bottom {
    bottom: 0;
    transform-origin: bottom right;
}
.quantumcropperjs-module .qm-input-wrapper .qm-input:focus ~ .bottom {
    transform-origin: bottom left;
    transform: scaleX(1);
}
.quantumcropperjs-module .qm-input-wrapper .right {
    right: 0;
    transform-origin: top right;
}
.quantumcropperjs-module .qm-input-wrapper .qm-input:focus ~ .right {
    transform-origin: bottom right;
    transform: scaleY(1);
}
.quantumcropperjs-module .qm-input-wrapper .top {
    top: 0;
    transform-origin: top left;
}
.quantumcropperjs-module .qm-input-wrapper .qm-input:focus ~ .top {
    transform-origin: top right;
    transform: scaleX(1);
}
.quantumcropperjs-module .qm-input-wrapper .left {
    left: 0;
    transform-origin: bottom left;
}
.quantumcropperjs-module .qm-input-wrapper .qm-input:focus ~ .left {
    transform-origin: top left;
    transform: scaleY(1);
}
.quantumcropperjs-module .name-file-wrap .qm-input-wrapper {
    display: flex;
    width: calc(100% - 70px);
}
.quantumcropperjs-module .name-file-wrap .qm-input-wrapper input {
    border-bottom-right-radius: 0 !important;
    border-top-right-radius: 0 !important;
}
.quantumcropperjs-module .name-file-wrap .qm-select {
    width: 70px;
    height: 30px;
}
.quantumcropperjs-module .change-ratio-wrap {
    margin-top: 25px;
}
/* ... */

